kube-manifists/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app
  labels:
    environment: test
    app: pingpong-app
spec:
  replicas: 2
  selector:
    matchLabels:
      environment: test
      app: pingpong-app
  template:
    metadata:
      labels:
        environment: test
        app: pingpong-app
    spec:
      containers:
      - name: pingpong-app
        image: ahmedkaballo/nodejs-test:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: biconomy
