kube-manifists/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-app-service
spec:
  type: ClusterIP
  selector:
   environment: test
   app: pingpong-app
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
