kube-manifists/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
name: pingpong-app-ingress
annotations:
kubernetes.io/ingress.class: nginx
nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
rules:
- host: release-argocd.riverex.bcc.internal
http:
paths:
- path: /ping
pathType: Prefix
backend:
service:
name: pingpong-app-service
port:
number: 3000
